--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,40 @@
 @charset "UTF-8";
-/* ページ内リンクの位置調整 */
-section {
-  margin-top: -60px;
-  padding-top: 60px;
+.no-js .back-to-top {
+  display: none;
+}
+.skills-heading {
+  position: relative;
+  letter-spacing: 2px;
+  padding-bottom: 1.5rem;
+}
+.skills-heading::before,
+.skills-heading::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-bottom: 1px solid #999;
+}
+
+.skills-heading::before {
+  bottom: 5px;
+}
+
+.skills-icon {
+  width: 150px;
+  height: 150px;
+  margin-bottom: 30px;
+  border: 4px solid;
+  border-radius: 50%;
+  color: #f1b400;
+  font-size: 7rem;
+  line-height: 142px;
+  text-align: center;
+  background-color: blue;
+}
+
+.link-logo {
+  color: #999;
+  font-size: 2rem;
 }
