--- a/css/custom.css
+++ b/css/custom.css
@@ -4,6 +4,36 @@ body{
   font-family: "Hiragino Kaku Gothic Pron", Meiryo, sans-serif;
 }
 
+/* ---------------------------
+progress bar
+------------------------------*/
+/* .progress {
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+.progress-bar {
+  border-top: 1px solid rgb(160, 160, 160);
+  position: absolute;
+  top: 50%;
+  width: 0%;
+}
+.progress-text {
+  font-family: "Menlo", "Consolas", "monospace";
+  font-size: 12px;
+  margin-top: 10px;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+} 
+.progress-complete .progress-bar {
+  border-top-color: rgb(255, 255, 255)
+} */
+
+
 /* ----------------------------
 animation
 ------------------------------- */
@@ -120,4 +150,20 @@ Skills
 .link-logo {
   color: #999;
   font-size: 2rem;
+}
+
+.card-img-top {
+  height: 100px;
+}
+
+/* ---------------
+btn animation
+------------------*/
+#buttons1 button{
+  display: block;
+  letter-spacing: 0.15rem;
+  color: #fff;
+  background-color: #ebc000;
+  border: none;
+  border-radius: 20px;
 }
