--- a/css/custom.css
+++ b/css/custom.css
@@ -91,31 +91,6 @@ About
   color:#A08FD5;
 }
 
-#portfolio{
-  background-color: #fd5f00;
-}
-.heading {
-  position: relative;
-  margin: 0 0 30px 15px;
-  letter-spacing: 2px;
-  padding-bottom: 15px;
-
-}
-
-.heading::before,
-.heading::after {
-  content: '';
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border-bottom: 1px solid #999;
-}
-
-.heading::before{
-  bottom: 5px;
-}
-
 .aboutLogo {
   height: 450px;
   width: 450px;
@@ -170,8 +145,38 @@ Skills
 }
 
 /* ---------------
-btn animation
+Portfolio 
 ------------------*/
+#portfolio{
+  background-image: url("https://images.unsplash.com/photo-1515787366009-7cbdd2dc587b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1400&q=60"); 
+  background-color: #cccccc; 
+  height: 500px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;
+}
+
+.heading {
+  position: relative;
+  margin: 0 0 30px 15px;
+  letter-spacing: 2px;
+  padding-bottom: 15px;
+  color: rgb(145, 37, 37);
+}
+
+.heading::before,
+.heading::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  border-bottom: 1px solid rgb(145, 37, 37);
+}
+
+.heading::before{
+  bottom: 5px;
+}
 
 #buttons1 button{
   display: block;
@@ -181,6 +186,9 @@ btn animation
   border: none;
   border-radius: 20px;
 }
+/* ---------------
+/Portfolio 
+------------------*/
 
 /*--------------------
 footer 
